# cpp-template

./: .clang-format  .clang-tidy  .clang_complete  .gitignore  .neoignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt
doc/: clang-clean.sh  clang-format.py  clang-tidy.py  clang-tools.sh  emacs_config.md  google_style_guide.md  link_3rdparty.sh  run.sh.example
include/: blocking_queue.h  common.h  hello.h  thread_pool.h  timer.h  util.h
script/: compile_flags.txt
src/: hello.cpp  timer.cpp  util.cpp
tools/: main.cpp
unittest/: main.cpp
